--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Zamani – Convert Naira to USDT</title>
+  <title>Zamani – Convert Naira to USDC</title>
 
   <!-- Google Font, Animate.css & FontAwesome -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -184,7 +184,7 @@
     <div class="content-section animate__animated animate__fadeInRight">
       <header>
         <h1>Zamani App</h1>
-        <p>Convert Naira to USDT seamlessly and earn passive yield.</p>
+        <p>Convert Naira to USDC seamlessly and earn passive yield.</p>
       </header>
 
       <section class="waitlist-section">
