--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div class="content-section animate__animated animate__fadeInRight">
       <header>
         <h1>Zamani App</h1>
-        <p>Convert Naira to USDC seamlessly and earn passive yield.</p>
+        <p>Convert Dollar to USDC seamlessly and earn passive yield.</p>
       </header>
 
       <section class="waitlist-section">
